package EjerciciosIteractivos_Modulo;

import java.util.ArrayList;

public interface EvaluadorRespuestas {
    boolean evaluarRespuestas(ArrayList<Respuesta>respuestasUsuario);
}
