package EjerciciosIteractivos_Modulo;

public enum Lenguaje {
    JAVA,
    PYTHON,
    C,
    PHP;
}
